migrating ySlow chrom extensions from manifest version 1 to version 2

--- a/src/chrome/yslow.html
+++ b/src/chrome/yslow.html
@@ -8,10 +8,10 @@
         <script src="yslow-chrome.js"></script>
         <script src="pref-init.js"></script>
         <script src="controller.js"></script>
+        <script src="yslow-helper.js"></script>
     </body>
 </html>
 <!--
 Copyright (c) 2012, Yahoo! Inc.  All rights reserved.
-Copyright (c) 2013, Marcel Duran and other contributors. All rights reserved.
 Copyrights licensed under the New BSD License. See the accompanying LICENSE file for terms.
 -->
